[workspace]
resolver = "2"
members = [
  "game_loop",
  "engine"
]

[workspace.dependencies]
game_loop = {path ="game_loop"}
engine = {path ="engine"}

eyre = "0.3.7"
thiserror = "1.0.48"
image = "0.24.7"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.19.3"
winit = "0.29.15"
bytemuck = {version = "1.15.0", features = [ "derive" ]}


[workspace.dependencies.mlua]
version = "0.9.4"
default-features = false 
features = ["lua54", "vendored"] 

[workspace.dependencies.winapi]
version = "0.3.9"
default-features = false
features = ["profileapi","sysinfoapi"]

[workspace.dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image"]

[workspace.dependencies.glfw]
version = "0.53.0"
default-features = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

