[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = {workspace=true}
gl = {workspace=true}
glfw = {workspace=true}
eyre = {workspace=true}
thiserror = {workspace=true}
cgmath = {workspace=true}
nalgebra-glm = {workspace=true}
nalgebra = {workspace=true}
image = {workspace=true}
winapi = {workspace=true}
mlua = {workspace=true}
serde = { version = "1.0", features = ["derive"] }
winit = {workspace=true}
serde_json = "1.0"
tobj = "4.0.0"
config = "0.14.0"
list-any = "0.2.1"


[features]
cargo-features = []