[package]
name = "game_loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {workspace=true}
input = {workspace=true}
ecs = {workspace=true}
time = {workspace=true}
view= {workspace=true}
gl = {workspace=true}
glfw = {workspace=true}
eyre = {workspace=true}
thiserror = {workspace=true}
cgmath = {workspace=true}
nalgebra-glm = {workspace=true}

[build-dependencies]
cmake = "0.1"