[package]
name = "game_loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = {workspace=true}
glfw = {workspace=true}
engine = {workspace=true}

eyre = {workspace=true}
thiserror = {workspace=true}
nalgebra-glm = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}

[build-dependencies]
cmake = "0.1"