[package]
name = "game_loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = {workspace=true}

eyre = {workspace=true}
thiserror = {workspace=true}
nalgebra-glm = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
mlua = {workspace=true}
winit = {workspace=true}

pollster = "0.3"


[build-dependencies]
cmake = "0.1"