[package]
name = "view"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = {workspace=true}
ecs = {workspace=true}
gl = {workspace=true}
nalgebra-glm = {workspace=true}
cgmath = {workspace=true}
input = {workspace=true}

image = {workspace=true}
eyre = {workspace=true}
thiserror = {workspace=true}
